--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Self Directed FD Starter</title>
+  <title>Magic 8 Ball</title>
 </head>
 <body>
-      <!--  the a tag below can link you to another HTML page  -->
-      <!--  if you click the button in the browser right now, you'll get an error because that is not a real file path -->
-      <a href="<file path"><button class="default-button">GO TO OTHER PAGE</button></a>
+  <h1> Magic 8 Ball </h1>
+    <a href="<file path"><button class="default-button">GO TO OTHER PAGE</button></a>
     <script
     src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
   </script>
