--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <title>Magic 8 Ball</title>
 </head>
+<link href="./lib/styles.css" rel="stylesheet">
 <body>
   <h1> Magic 8 Ball </h1>
-    <a href="<file path"><button class="default-button">GO TO OTHER PAGE</button></a>
+      <img src = "./assets/8-ball.png" alt="8 Ball" height="600" class="eight-ball-image">
+        <a href="<file path"><button class="default-button">GO TO OTHER PAGE</button></a>
     <script
     src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
   </script>
