Add initial hover functionality to be activated by input later

--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
 <head>
   <meta charset="utf-8">
   <title>Magic 8 Ball</title>
+  <style>
+img:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+</style>
 </head>
 <link href="./lib/styles.css" rel="stylesheet">
 <body>
   <h1> Magic 8 Ball </h1>
+  <p>Hover over the image:</p>
       <img src = "./assets/8-ball.png" alt="8 Ball" height="600" class="eight-ball-image">
         <a href="<file path"><button class="default-button">GO TO OTHER PAGE</button></a>
     <script
