--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ img:hover {
 
       <h5>Ask for Advice</h5>
           <span class="text-right"><input type="text" placeholder="Keyword" id="keyword">
-          <button id="get-advice"onclick= "getAdvice()">Get Advice</button>
+          <button id="get-advice">Get Advice</button>
+
 
       <div id="div1">
       </div>
