--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@ img:hover {
 <link href="./lib/styles.css" rel="stylesheet">
 <body>
   <h1> Magic 8 Ball </h1>
-  <p>Hover over the image:</p>
-      <img src = "./assets/8-ball.png" alt="8 Ball" height="600" class="eight-ball-image">
 
-      <h5>Ask for Advice</h5>
-          <span class="text-right"><input type="text" placeholder="Keyword" id="keyword">
-          <button id="get-advice"onclick= "getAdvice()">Get Advice</button>
+  <h5>Ask for Advice</h5>
+      <span class="text-right"><input type="text" placeholder="Keyword" id="keyword">
+      <button id="get-advice">Get Advice</button>
 
-
-      <div id="div1">
+  <div class="image-container">
+      <img src = "./assets/8-ball.png" alt="8 Ball" height="600" class="eight-ball-image" id= "image">
+      <div class="centered"><div id="div1">
       </div>
+    </div>
+  </div>
+
+
+
 
     <script
     src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
