Change advice image and stop shaking when advice is given

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="image-container">
       <img src = "./assets/8-ball.png" alt="8 Ball" height="600" class="eight-ball-image" id= "image" >
-      <div class="centered"><div id="div1">
+      <div class="advice-text"><div id="div1">
       </div>
     </div>
   </div>
