Add random button that retrieves a random piece of advice

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h5>Ask for Advice</h5>
       <span class="text-right"><input type="text" placeholder="Keyword" id="keyword">
       <button id="get-advice">Get Advice</button>
+      <button id="random-advice">Random</button>
 
   <div class="image-container">
       <img src = "./assets/8-ball.png" alt="8 Ball" height="600" class="eight-ball-image" id= "image" >
