Reset page on button click

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
     </div>
   </div>
+  <button id="reset-btn">Reset</button>
 
     <script
     src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
