Shaking starts upon request and stops on response. Text is displaying too soon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button id="random-advice">Random</button>
 
   <div class="image-container">
-      <img src = "./assets/8-ball.png" alt="8 Ball" height="600" class="eight-ball-image" id= "image" >
+      <img src = "./assets/8-ball.png" alt="8 Ball" height="600" id= "image" >
       <div class="advice-text"><div id="div1">
       </div>
     </div>
